--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FoodyRecipes.NoActionBar">
+            android:theme="@style/Theme.FoodyRecipes">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
