--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:name=".FoodyRecipesApplication"
@@ -17,17 +19,24 @@
         android:theme="@style/Theme.FoodyRecipes"
         tools:targetApi="31">
         <activity
-            android:name=".ui.MainActivity"
-            android:exported="true"
+            android:name=".ui.IntroActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FoodyRecipes">
+            android:theme="@style/Theme.IntroActivtiy"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".reminder.AlarmReceiver"/>
+
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.FoodyRecipes">
+        </activity>
+
+        <receiver android:name=".reminder.AlarmReceiver" />
     </application>
 
 </manifest>
